Added logging function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.29)
 project(msflyremotec)
 
 set(CMAKE_CXX_STANDARD 20)
-set(SOURCES main.cpp "C:/MSFS SDK/SimConnect SDK/include/SimConnect.h" "C:/Users/silenceisgrand/AppData/Local/Packages/Microsoft.FlightSimulator_8wekyb3d8bbwe/LocalCache/Packages/Community/pmdg-aircraft-736/Documentation/SDK/PMDG_NG3_SDK.h")
+set(SOURCES main.cpp
+        "C:/MSFS SDK/SimConnect SDK/include/SimConnect.h"
+        "C:/Users/silenceisgrand/AppData/Local/Packages/Microsoft.FlightSimulator_8wekyb3d8bbwe/LocalCache/Packages/Community/pmdg-aircraft-736/Documentation/SDK/PMDG_NG3_SDK.h"
+        )
 
 add_executable(msflyremotecpp ${SOURCES})
 
