Added config file logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(SOURCES main.cpp
         "C:/MSFS SDK/SimConnect SDK/include/SimConnect.h"
         "C:/Users/silenceisgrand/AppData/Local/Packages/Microsoft.FlightSimulator_8wekyb3d8bbwe/LocalCache/Packages/Community/pmdg-aircraft-736/Documentation/SDK/PMDG_NG3_SDK.h"
-        )
+        Config.cpp
+        Config.h)
 
 add_executable(msflyremotecpp ${SOURCES})
 
